...
import java.time.ZoneId
import java.time.format.DateTimeFormatter
import kotlinx.coroutines.FlowPreview

/** Test tags for the create meeting screen. */
object CreateMeetingScreenTestTags {
  const val CREATE_MEETING_SCREEN_TITLE = "CreateMeetingScreenTitle"
  const val CREATE_MEETING_SCREEN_DESCRIPTION = "CreateMeetingScreenDescription"
  const val ERROR_MSG = "ErrorMsg"
  const val INPUT_MEETING_TITLE = "InputMeetingTitle"
  const val INPUT_MEETING_DATE = "InputMeetingDate"
  const val INPUT_MEETING_TIME = "InputMeetingTime"
  const val INPUT_MEETING_DURATION = "InputMeetingDuration"
  const val INPUT_FORMAT = "InputFormat"
  const val INPUT_MEETING_LINK = "InputMeetingLink"
  const val MEETING_LINK_WARNING = "MeetingLinkWarning"
  const val PLATFORM_ICON = "PlatformIcon"
  const val CREATE_MEETING_BUTTON = "CreateMeetingButton"
  const val INPUT_MEETING_LOCATION = "InputMeetingLocation"
  const val LOCATION_SUGGESTION = "LocationSuggestion"
  const val PICK_LOCATION = "PickLocation"
  const val BACK_BUTTON = "BackButton"
}

/** Spacing between each component or subcomponent on the screen. */
const val SPACING = 8

/**
...
                if (focusState.isFocused) {
                  onTitleTouch()
                }
              })
  if (title.isBlank() && hasTouchedTitle) {
    Text(
        text = "Title cannot be empty",
        color = Color.Red,
        style = MaterialTheme.typography.bodySmall,
        modifier = Modifier.testTag(CreateMeetingScreenTestTags.ERROR_MSG))
  }
}

...
    hasTouchedTime: Boolean
) {
  if (hasTouchedDate &&
      hasTouchedTime &&
      LocalDateTime.of(date, time).isBefore(LocalDateTime.now())) {
    Text(
        text = "Meeting should be scheduled in the future.",
        color = Color.Red,
        style = MaterialTheme.typography.bodySmall,
        modifier = Modifier.testTag(CreateMeetingScreenTestTags.ERROR_MSG))
  }
}

...
        IconButton(
            onClick = {
              showDialog = true
              onDateTouched()
            },
            modifier = Modifier.testTag(tag)) {
              Icon(Icons.Default.DateRange, contentDescription = "Select date")
            }
      },
      modifier =
          Modifier.fillMaxWidth().clickable {
            showDialog = true
            onDateTouched()
...
                datePickerState.selectedDateMillis?.let { millis ->
                  val newDate =
                      Instant.ofEpochMilli(millis).atZone(ZoneId.systemDefault()).toLocalDate()
                  onDateSelected(newDate)
                }
              }) {
                Text("OK")
              }
        },
        dismissButton = { TextButton(onClick = { showDialog = false }) { Text("Cancel") } }) {
          DatePicker(
              state = datePickerState, modifier = Modifier.verticalScroll(rememberScrollState()))
        }
  }
}

...
            showDialog = true
            onTimeTouched()
          })

  if (showDialog) {
    TimePickerDialog(
        title = { Text("Select time") },
        onDismissRequest = { showDialog = false },
        confirmButton = {
          TextButton(
              onClick = {
                showDialog = false
                onTimeSelected(LocalTime.of(timePickerState.hour, timePickerState.minute))
...
                        Modifier.padding(8.dp)
                            .testTag(CreateMeetingScreenTestTags.LOCATION_SUGGESTION))
              }

              if (locationSuggestions.size > 3) {
                DropdownMenuItem(
                    text = { Text("More...") }, onClick = {}, modifier = Modifier.padding(8.dp))
              }
            }
      }
}

