...
    <string name="edit_task_confirm_no">No</string>

    <!-- Date Field Configuration -->
    <string name="date_field_min_date_label">Min Date (YYYY-MM-DD)</string>
    <string name="date_field_max_date_label">Max Date (YYYY-MM-DD)</string>
    <string name="date_field_include_time">Include Time</string>
    <string name="date_field_format_label">Format</string>
    <string name="date_field_format_default">yyyy-MM-dd</string>
    <string name="date_field_invalid_format">Invalid date format pattern</string>

    <!-- Multi Select Field Configuration -->
    <string name="multi_select_min_label">Min Selections</string>
    <string name="multi_select_max_label">Max Selections</string>
...
    <string name="create_meeting_title_placeholder">Title of the meeting</string>
    <string name="create_meeting_title_error">Title cannot be empty</string>
    <string name="create_meeting_date_label">Date</string>
    <string name="create_meeting_date_placeholder">Select date</string>
    <string name="create_meeting_time_label">Time</string>
    <string name="create_meeting_time_placeholder">Select time</string>
    <string name="create_meeting_duration_label">Duration</string>
    <string name="create_meeting_duration_placeholder">Select duration</string>
    <string name="create_meeting_duration_option">%1$d minutes</string>
    <string name="create_meeting_duration_dialog_title">Select a duration</string>
    <string name="create_meeting_format_label">Format</string>
    <string name="create_meeting_format_placeholder">Select format</string>
    <string name="create_meeting_format_dialog_title">Select a format</string>
    <string name="create_meeting_location_label">Location</string>
    <string name="create_meeting_location_placeholder">Enter an Address or Location</string>
    <string name="create_meeting_location_pick_icon">Pick location</string>
    <string name="create_meeting_location_more">More...</string>
    <string name="create_meeting_future_validation_error">Meeting should be scheduled in the future.</string>
    <string name="create_meeting_save_button">Save</string>
...
